...
                android:text="Profiles" />

            <android.support.design.widget.TabItem
                android:id="@+id/schedulesTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schedules" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
...
