<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedulesLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Controller.schedulesListViewController"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/calendarActionButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@android:color/holo_red_dark"
        android:clickable="true"
        android:text="Calendar View"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="300dp"
        android:layout_height="433dp"
        android:layout_below="@+id/calendarActionButton"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/calendarActionButton"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <ListView
            android:id="@+id/schedulesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/calendarActionButton" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:visibility="visible"
            app:fabSize="normal"
            app:srcCompat="@drawable/plus" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/deleteScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </android.support.design.widget.CoordinatorLayout>


</android.support.constraint.ConstraintLayout>

