<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/mondayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Monday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/tuesdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Tuesday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/wednesdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Wednesday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/thursdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Thursday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/fridayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Friday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/saturdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Saturday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="0dp">

        <TextView
            android:id="@+id/sundayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="Sunday"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profiles:" />

        <ListView
            android:id="@+id/scheduledProfilesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

</TableLayout>
