<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_day_view"
        android:title="@string/action_day_view"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_week_view"
        android:title="@string/action_week_view"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
</menu>
